style.css
@import url("https://fonts.googleapis.com/css?family=Orbitron&display=swap");

html {
	background-color: cornsilk;
	font-family: "Orbitron", sans-serif;
}

header {
	text-align: center;
}

h1 {
	font-size: 3rem;
}

#githubicon {
	position: absolute;
	top: 40px;
	right: 10vw;
	width: 60px;
	height: 60px;
	transition: 1.5s;
	z-index: 0;
	background-color: transparent;
	border-radius: 30px;
}

#githubicon:hover {
	transform: translateY(-5px);
	background-color: azure;
}

a {
	text-decoration: none;
	color: black;
	margin-bottom: 20px;
}

#main {
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
}

.linkBox {
	border: 1px solid black;
	border-radius: 7px;
	width: 30vw;
	text-align: center;
}

@media screen and (max-width: 1000px) {
	.linkBox {
		width: 50vw !important;
	}

	#githubicon {
		top: 100px !important;
	}
}

.linkBox:hover {
	background-color: gray;
	cursor: pointer;
}

.linkText {
	font-size: xx-large;

}

footer {
	text-align: center;
}

#updateText {
	font-size: 0.8rem;
}

